After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 726642 - rtspconnection: minor memory leak in error handling
rtspconnection: minor memory leak in error handling
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.2.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-03-18 15:50 UTC by Ognyan Tonchev (redstar_)
Modified: 2014-04-12 13:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtspconnection: Fix memory leak in error handling (1.05 KB, patch)
2014-03-18 15:51 UTC, Ognyan Tonchev (redstar_)
committed Details | Review

Description Ognyan Tonchev (redstar_) 2014-03-18 15:50:32 UTC
The uri will be leaked if connection_connect() fails.
Comment 1 Ognyan Tonchev (redstar_) 2014-03-18 15:51:10 UTC
Created attachment 272291 [details] [review]
rtspconnection: Fix memory leak in error handling
Comment 2 Wim Taymans 2014-03-24 13:16:23 UTC
commit d7857325c50b7fa173e980bdaec77c405f7b50b9
Author: Ognyan Tonchev <otonchev@gmail.com>
Date:   Sun Mar 16 17:04:44 2014 +0100

    rtspconnection: Fix minor memory leaks in error handling
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=726642