rtspconnection: Fix minor memory leaks in error handling

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=726642